; ModuleID = '/home/carl/AnghaBench/linux/kernel/bpf/extr_syscall.c_bpf_map_inc.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/bpf/extr_syscall.c_bpf_map_inc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bpf_map = type { i32, i32 }

@BPF_MAX_REFCNT = common dso_local global i64 0, align 8
@EBUSY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.bpf_map* @bpf_map_inc(%struct.bpf_map* %0, i32 %1) #0 {
  %3 = alloca %struct.bpf_map*, align 8
  %4 = alloca %struct.bpf_map*, align 8
  %5 = alloca i32, align 4
  store %struct.bpf_map* %0, %struct.bpf_map** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.bpf_map*, %struct.bpf_map** %4, align 8
  %7 = getelementptr inbounds %struct.bpf_map, %struct.bpf_map* %6, i32 0, i32 1
  %8 = call i64 @atomic_inc_return(i32* %7)
  %9 = load i64, i64* @BPF_MAX_REFCNT, align 8
  %10 = icmp sgt i64 %8, %9
  br i1 %10, label %11, label %18

11:                                               ; preds = %2
  %12 = load %struct.bpf_map*, %struct.bpf_map** %4, align 8
  %13 = getelementptr inbounds %struct.bpf_map, %struct.bpf_map* %12, i32 0, i32 1
  %14 = call i32 @atomic_dec(i32* %13)
  %15 = load i32, i32* @EBUSY, align 4
  %16 = sub nsw i32 0, %15
  %17 = call %struct.bpf_map* @ERR_PTR(i32 %16)
  store %struct.bpf_map* %17, %struct.bpf_map** %3, align 8
  br label %27

18:                                               ; preds = %2
  %19 = load i32, i32* %5, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %18
  %22 = load %struct.bpf_map*, %struct.bpf_map** %4, align 8
  %23 = getelementptr inbounds %struct.bpf_map, %struct.bpf_map* %22, i32 0, i32 0
  %24 = call i32 @atomic_inc(i32* %23)
  br label %25

25:                                               ; preds = %21, %18
  %26 = load %struct.bpf_map*, %struct.bpf_map** %4, align 8
  store %struct.bpf_map* %26, %struct.bpf_map** %3, align 8
  br label %27

27:                                               ; preds = %25, %11
  %28 = load %struct.bpf_map*, %struct.bpf_map** %3, align 8
  ret %struct.bpf_map* %28
}

declare dso_local i64 @atomic_inc_return(i32*) #1

declare dso_local i32 @atomic_dec(i32*) #1

declare dso_local %struct.bpf_map* @ERR_PTR(i32) #1

declare dso_local i32 @atomic_inc(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
